; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_gl_video_load_hwdecs_all.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_video.c_gl_video_load_hwdecs_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_video = type { i32 }
%struct.mp_hwdec_devices = type { i32 }

@ra_hwdec_drivers = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_video_load_hwdecs_all(%struct.gl_video* %0, %struct.mp_hwdec_devices* %1) #0 {
  %3 = alloca %struct.gl_video*, align 8
  %4 = alloca %struct.mp_hwdec_devices*, align 8
  %5 = alloca i32, align 4
  store %struct.gl_video* %0, %struct.gl_video** %3, align 8
  store %struct.mp_hwdec_devices* %1, %struct.mp_hwdec_devices** %4, align 8
  %6 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %7 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %33, label %10

10:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %27, %10
  %12 = load i64*, i64** @ra_hwdec_drivers, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i64, i64* %12, i64 %14
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %30

18:                                               ; preds = %11
  %19 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %20 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %4, align 8
  %21 = load i64*, i64** @ra_hwdec_drivers, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %21, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @load_add_hwdec(%struct.gl_video* %19, %struct.mp_hwdec_devices* %20, i64 %25, i32 1)
  br label %27

27:                                               ; preds = %18
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  br label %11

30:                                               ; preds = %11
  %31 = load %struct.gl_video*, %struct.gl_video** %3, align 8
  %32 = getelementptr inbounds %struct.gl_video, %struct.gl_video* %31, i32 0, i32 0
  store i32 1, i32* %32, align 4
  br label %33

33:                                               ; preds = %30, %2
  ret void
}

declare dso_local i32 @load_add_hwdec(%struct.gl_video*, %struct.mp_hwdec_devices*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
